# unella

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg
html_templates/: main_template.html
html_templates/modules/: mypy_report_template.html
markdown_templates/: main_template.md
markdown_templates/modules/: bandit_report_template.md  gitleaks_report_template.md  mypy_report_template.md  radon_report_template.md  ruff_report_template.md  structure_report_template.md  vulture_report_template.md
templates/: main_template.html
templates/modules/: bandit_report_template.html  gitleaks_report_template.html  mypy_report_template.html  radon_report_template.html  ruff_report_template.html  structure_report_template.html  vulture_report_template.html
tests/: conftest.py  test_audit_generator.py  test_utils.py
tests/modules/: test_bandit.py  test_gitleaks.py  test_mypy.py  test_radon.py  test_ruff.py  test_structure.py  test_vulture.py
unella/: audit_generator.py  cli.py  main.py  utils.py
unella/modules/: audit_generator.py  generic.py
unella/modules/bandit/: main.py
unella/modules/gitleaks/: main.py
unella/modules/mypy/: main.py
unella/modules/radon/: main.py
unella/modules/ruff/: main.py
unella/modules/structure/: main.py
unella/modules/vulture/: main.py
