[metadata]
name = unella
version = 0.1.0
description = A tool to automatically generate audit report for Python projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sorasful/unella
author = Sorasful
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    ruff>=0.1.2
    mypy>=1.6.1
    vulture>=2.10
    wily>=1.25.0
    radon>=5.1.0
    bandit>=1.7.5
    rich>=13.6.0
    loguru>=0.7.2
    jinja2>=3.1.2
    PyYAML>=6.0.1
python_requires = >=3.10.1

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    unella = unella.main:main
